# netsensitize-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  redact-mcp.service
.github/workflows/: ci.yml
ai/: claude_build_prompt.md  coderabbit_review.md  opencode_validate_prompt.md
config/: claude_hardended_shell.json  claude_sandbox.json  opencode_hardened_shell.json  opencode_sandbox.json
docs/: ai-workflow.md  api.md  architecture.md  performance-review.md  production-readiness.md  risk-assessment.md  security-audit-2026-02-15.md  security.md
docs/chat/: session_.md
docs/logs/: README.md
src/redact_mcp/: __init__.py  config.py  logging_config.py  main.py  middleware.py  models.py  rate_limiter.py  redactor.py  storage.py
tests/: conftest.py  test_api.py  test_concurrency.py  test_fuzz.py  test_internal_components.py  test_performance.py  test_redactor.py  test_storage.py
