[tool.poetry]
name = "netsensitize-mcp-server"
version = "0.1.0"
description = "MCP server for redacting network data before AI processing"
authors = ["Nauman Moiz"]
packages = [{ include = "redact_mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=redact_mcp --cov-report=term-missing -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
