[tool.poetry]
name = "netsensitize-mcp-server"
version = "0.1.0"
description = "MCP server for redacting network data before AI processing"
authors = ["Nauman Moiz"]
packages = [{ include = "redact_mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.5"
hypothesis = "^6.103.0"
pytest-benchmark = "^4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=redact_mcp --cov-report=term-missing --cov-fail-under=95 -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
